k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stomachforce-backend
  namespace: seongjae-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stomachforce-backend
  template:
    metadata:
      labels:
        app: stomachforce-backend
    spec:
      containers:
      - name: stomachforce-backend
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/seongjae-deploy:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /announcement/list
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 10
          # 확인 반복 주기
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: stomachforce-backend-service
  namespace: seongjae-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: stomachforce-backend
